--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,11 +16,16 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'  
+
+    - name: Set up Maven
+      uses: actions/setup-maven@v2
+      with:
+        maven-version: '3.8.4' 
     
     - name: Install dependencies
       run: mvn install
