--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,9 +23,9 @@ jobs:
         distribution: 'temurin'  
 
     - name: Set up Maven
-      uses: actions/setup-maven@v2
+      uses: marcofranssen/setup-maven@v1  
       with:
-        maven-version: '3.8.4' 
+        maven-version: '3.8.4'
     
     - name: Install dependencies
       run: mvn install
