--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,8 +23,9 @@ jobs:
         distribution: 'temurin'  
 
     - name: Set up Maven
-      uses: marcofranssen/setup-maven@v1  
+      uses: actions/setup-java@v3
       with:
+        java-version: '17'
         maven-version: '3.8.4'
     
     - name: Install dependencies
