--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,4 +29,4 @@ jobs:
       run: mvn install
 
     - name: Run Selenium tests
-      run: mvn test -Dtest=**/seleniumTest/*.java
+      run: mvn test -Dtest=ProductByCategoryTest,RegistrationTest
